responsive fixes on tablet for speakers, projects, awards & about

--- a/codegarden18/css/master.css
+++ b/codegarden18/css/master.css
@@ -22,7 +22,7 @@
 /*
     Topbars
 */
-.aboutborder {
+.aboutBorder {
   border-top: 0.5em solid #F36F21; }
 
 .awardsTopBorder {
@@ -112,21 +112,38 @@ h1, h2 {
       float: left;
       margin-top: 8%;
       margin-left: 4%; }
-  ._awardsduring .content {
-    margin: 0;
-    position: absolute;
-    left: 60%;
-    top: 80%;
-    margin-left: -100px;
-    margin-top: -100px; }
-    ._awardsduring .content h6 {
-      text-align: center;
-      margin-right: 5px; }
-    ._awardsduring .content p {
-      text-align: justify;
-      margin-right: 5px;
-      font-size: 0.65rem;
-      position: relative; }
+    ._awardsduring .rect .content {
+      margin: 0;
+      position: absolute;
+      left: 60%;
+      top: 80%;
+      margin-left: -100px;
+      margin-top: -100px; }
+      ._awardsduring .rect .content h6 {
+        text-align: center;
+        margin-right: 5px; }
+      ._awardsduring .rect .content p {
+        text-align: justify;
+        margin-right: 5px;
+        font-size: 0.65rem;
+        position: relative; }
+
+@media screen and (min-width: 768px) {
+  ._awardsduring {
+    min-height: 90vh; }
+    ._awardsduring .rect {
+      height: auto;
+      min-height: 275px;
+      padding-top: .5rem; }
+      ._awardsduring .rect img {
+        float: none;
+        margin: .5rem auto;
+        display: block; }
+      ._awardsduring .rect .content {
+        position: relative;
+        left: auto;
+        top: auto;
+        margin: 1rem .5rem .5rem .5rem; } }
 
 ._awardsbefore {
   font-family: Lato;
@@ -212,6 +229,11 @@ h1, h2 {
   ._category h4, ._category p {
     color: white;
     font-family: Lato; }
+
+@media screen and (min-width: 768px) {
+  ._category a.vote {
+    right: -5%;
+    padding: .3rem .5rem; } }
 
 .socialMedia {
   width: 100%;
@@ -522,7 +544,7 @@ h1, h2 {
     text-align: justify; }
   .project img {
     width: 100%;
-    height: 200px; }
+    height: 100%; }
   .project form.vote input[type=submit] {
     background-color: #EF5E5E;
     border: none;
@@ -544,6 +566,10 @@ h1, h2 {
     display: block; }
   .project #vote-message {
     color: #fff; }
+
+@media screen and (min-width: 768px) {
+  .project img {
+    height: 100%; } }
 
 .bodyText {
   color: #fff; }
