--- a/codegarden18/sass/_awardduring.scss
+++ b/codegarden18/sass/_awardduring.scss
@@ -22,27 +22,51 @@
             margin-top: 8%;
             margin-left: 4%;
         }
-    }
 
-    .content {
-        margin: 0;
-        position: absolute;
-        left: 60%;
-        top: 80%;
-        margin-left: -100px;
-        margin-top: -100px;
+        .content {
+            margin: 0;
+            position: absolute;
+            left: 60%;
+            top: 80%;
+            margin-left: -100px;
+            margin-top: -100px;
 
-        h6 {
-            text-align: center;
-            margin-right: 5px;
-            
+            h6 {
+                text-align: center;
+                margin-right: 5px;
+            }
+
+            p {
+                text-align: justify;
+                margin-right: 5px;
+                font-size: 0.65rem;
+                position: relative;
+            }
         }
+    }
+}
 
-        p {
-            text-align: justify;
-            margin-right: 5px;
-            font-size: 0.65rem;
-            position:relative;
+@media screen and (min-width: 768px){
+    ._awardsduring {
+        min-height: 90vh;
+
+        .rect {
+            height: auto;
+            min-height: 275px;
+            padding-top: .5rem;
+
+            img {
+                float: none;
+                margin: .5rem auto;
+                display: block;
+            }
+
+            .content {
+                position: relative;
+                left: auto;
+                top: auto;
+                margin: 1rem .5rem .5rem .5rem;
+            }
         }
     }
 }
