--- a/codegarden18/sass/_category.scss
+++ b/codegarden18/sass/_category.scss
@@ -98,3 +98,12 @@
         font-family: Lato;
     }
 }
+
+@media screen and (min-width: 768px) {
+    ._category {
+        a.vote {
+            right: -5%;
+            padding: .3rem .5rem;
+        }
+    }
+}
