--- a/codegarden18/sass/_elements.scss
+++ b/codegarden18/sass/_elements.scss
@@ -3,7 +3,7 @@
 */
 $topbarHeight: .5em;
 
-.aboutborder {
+.aboutBorder {
     border-top: $topbarHeight solid $cg-orange;
 }
 
