--- a/codegarden18/sass/_project.scss
+++ b/codegarden18/sass/_project.scss
@@ -13,7 +13,7 @@
 
     img {
         width: 100%;
-        height: 200px;
+        height: 100%;
     }
 
     form.vote {
@@ -50,5 +50,13 @@
 
     #vote-message{
         color: $cg-font-color;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .project{
+        img{
+            height: 100%;
+        }
     }
 }
